cluster/apps/networking/traefik/external/iot/backside/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: backside
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.14
    ports:
      - name: default
        port: 80
        protocol: TCP
