cluster/apps/networking/traefik/external/iot/backside/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: lightbulb
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: backside
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_BACKSIDE_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: backside
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_BACKSIDE_DOMAIN}"
      secretName: backside
